updating readme,formatting

--- a/test.html
+++ b/test.html
@@ -4,16 +4,10 @@
     </head>
     
     <body>
-        <script type="text/javascript" src="microtemplatez.js">
-        </script>
+        <script type="text/javascript" src="microtemplatez.js"></script>
         <script type="text/micro" id="test">
-            < img src = "{{avatar}}"
-            title = "{{username}}"
-            alt = "{{username}}" / > < span > {
-                {
-                    username
-                }
-            } < /span>
+            <img src = "{{avatar}}" title = "{{username}}"  alt = "{{username}}" /> 
+			<span> {{username}} </span>
         </script>
         <script type="text/javascript">
             /*test 1*/
